# mkdocs-macros-utils

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  README_PyPI.md  index.html  jest.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/json2vars-setter/: matrix.json
.github/workflows/: dependabot_prch.yml  deploy.yml  pullrequest_check.yml  test_multi_os.yml  update-requirements-after-dependabot.yml  update_pre-commit_hooks.yml  update_version_and_release.yml
.github/workflows/act/: local-test.yml  run-local-tests.sh
.github/workflows/act/test-data/: event.json
docs/: index.md  tags.md
docs/examples/: gist-codeblock-macro.md  index.md  link-card-macro.md  svg-info.md  x-twitter-card-macro.md
docs/javascripts/macros-utils/: x-twitter-widget.js
examples/: index.html
examples/gist-codeblock-macro/: index.html
examples/link-card-macro/: index.html
examples/x-twitter-card-macro/: index.html
mkdocs_macros_utils/: __init__.py  debug_logger.py  get_svg_gist.py  gist_codeblock.py  gist_codeblock_async.py  link_card.py  link_card_async.py  x_twitter_card.py
mkdocs_macros_utils/static/css/: link-card.css
mkdocs_macros_utils/static/js/: x-twitter-widget.js
overrides/: main.html
overrides/partials/: header.html
scripts/: run_tests.py
search/: search_index.json
stylesheets/macros-utils/: link-card.css
tags/: index.html
tests/: __init__.py
tests/js/: setup.js  x-twitter-widget.test.js
tests/mkdocs_macros_utils/: test__init__.py  test_debug_logger.py  test_gist_codeblock.py  test_link_card.py  test_x_twitter_card.py
tests/python/: __init__.py  conftest.py
tests/python/mkdocs_macros_utils/: test__init__.py  test_debug_logger.py  test_gist_codeblock.py  test_link_card.py  test_x_twitter_card.py
