[project]
name = "mkdocs-macros-utils"
version = "0.0.9"
description = "mkdocs-macros-utils is a zensical-based project that provides macros to extend cards, code blocks, etc, in MkDocs documents."
authors = [
    {name = "7rikazhexde", email = "33836132+7rikazhexde@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README_PyPI.md"
requires-python = ">=3.10"
dependencies = [
    "zensical>=0.0.41",
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "pygments>=2.19.1",
]

[project.urls]
homepage = "https://github.com/7rikazhexde/mkdocs-macros-utils"
repository = "https://github.com/7rikazhexde/mkdocs-macros-utils"
documentation = "https://7rikazhexde.github.io/mkdocs-macros-utils/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_macros_utils"]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<10.0.0",
    "mypy>=1.14.1,<3.0.0",
    "ruff>=0.9.4,<0.16.0",
    "pre-commit>=4.1.0",
    "pytest-cov>=6,<8",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "taskipy>=1.14.1",
]

# Task runner configuration
[tool.taskipy.tasks]
testcoverageverbose = "pytest -s -vv --cov=mkdocs_macros_utils --cov-branch --cov-report term-missing --cov-report html"
testhtmlreport = "pytest --html=htmlcov/report_page.html"
testcixml = "python scripts/run_tests.py --report xml"
testciterm = "python scripts/run_tests.py --report term"
testcoverage = "pytest --cov=mkdocs_macros_utils --cov-branch --cov-report=term-missing --cov-report=html"

# Type checking configuration
[tool.mypy]
files = ["mkdocs_macros_utils", "tests"]
explicit_package_bases = true
python_version = "3.12"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["zensical.*","jinja2.*","ruamel.*","pygments.*","yaml.*"]
ignore_missing_imports = true

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests/python"]
